--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,1 +1,75 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PriorityHealth</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body style="background-color:#003366">
+  <header class="header">
+    <a href="#" class="logo">PriorityHealth</a>
+    <nav class="nav-items">
+      <a href="index.html">Home</a>
+      <a href="fitness.html">Fitness</a>
+      <a href="mental_health.html">Mental Health Clinic</a>
+      <a href="chat.html">Connect with Doctor</a>
+      <a href="my_account.html">My Account</a>
+      
+    </nav>
+  </header>
+  <main>
+    <h1 style="color:#fff">Who we are</h1>
+    <div class="intro">
+      <img src="https://cdn.britannica.com/06/166706-131-5A350CFB/stethoscope-Apple-background-Apples-Doctors-human-health.jpg" width="300" height="300" alt="">
+      <p>At PriorityHealth, we believe that your health is a top priority. However in today's fast-paced world, other factors take up precedence and we tend to ignore our health. This leads to both mental and physical health issues.The mind, body, and soul must be kept in balance for whole well-being. PriorityHealth will help you get your health back on track. Click below to get started!</p>
+      <br>
+      <button onclick="window.location.href = 'my_account.html';"> Create Account</button>
+
+    </div>
+    <h1 style="color:#fff">How we help</h1>
+    <div class="achievements">
+      <p>In order to help you take care of your overall health, we have quite a few features.
+        You can
+        consult with one of doctors online, via chat or call. Click the tab "Connect with doctor" 
+        to get started. Please note that all of the communication will
+        remain confidential.</p>
+      <br>
+      <p> If you are suffering from mental health issues
+        or just feeling down, you can consult one of our therapists. 
+        You can also track your feelings in the diary and 
+        become a volunteer therapist. Moreover, it has been shown in many studies that meditation
+        helps with mental health issues, especially anxiety and depression. Click the
+        <a href="https://www.youtube.com/watch?v=ZToicYcHIOU">link</a> to get the meditation audio.
+      </p>
+    </div>
+
+    </div>
+    <h1 style="color:#fff">Additional Features</h1>
+    <div class="achievements">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZRbsrxZ3cvuby9oul52ykL4o46iXkKVsyvg&usqp=CAU" width="300" height="200" alt=""><br>
+      <p> Fitness is an important aspect of daily life and CDC recommends having 30 minutes of physical activity every day. You can keep track of your fitness progress. Just head over to the "Fitness" tab to get started. You can track your average heart rate, calories burned and amount of time being active. You can also talk with a fitness instructor and purchase smart watches to help you keep track.</p>
+
+    </div>
+
+  </main>
+  <footer class="footer">
+    <div class="copy">&copy; 2022 PriorityHealth. All Rights Reserved.</div>
+    <div class="bottom-links">
+      <div class="links">
+        <a href="index.html">Home</a>
+      <a href="fitness.html">Fitness</a>
+      <a href="mental_health.html">Mental Health Clinic</a>
+      <a href="chat.html">Connect with Doctor</a>
+      <a href="my_account.html">My Account</a>
+      </div>
+
+    </div>
+  </footer>
+</body>
+
+</html>
