--- a/frontend/fitness.html
+++ b/frontend/fitness.html
@@ -27,12 +27,12 @@
     <h1 style="color:#fff">Fitness progress</h1>
     <img src="https://www.researchgate.net/profile/Martin-Peniak/publication/228109879/figure/fig4/AS:302289593094147@1449082863299/Fitness-graph-showing-maximum-and-average-fitness-as-well-as-the-threshold-Note-that-the.png">
     <br>
-      <p style="color:#fff">Average heart rate: 120 bpm</p>
+    <p style="color:#fff">Average heart rate: 120 bpm</p>
     <p style="color:#fff">Total hours exercised: 5 hrs</p>
     <p style="color:#fff">Total calories burned: 1000kcal</p>
 
     <p style="color:#fff">Here is your fitness graph.Your AI instructor detected you are not exercising enough. Please exercise more. You can upload fitness records by clicking upload.<br>
-      <button>Upload fitness records</button></p>
+      <button>Upload fitness record</button></p>
     <br>
     
     <img src="https://media.istockphoto.com/photos/muscular-trainer-writing-on-clipboard-picture-id675179390?k=20&m=675179390&s=612x612&w=0&h=7LP7-OamGu-b8XG-VKcJuamK5s80ke-4oJ5siUrjFVA=" alt="Mr.Aaron" width="170" height="170">
